// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.HomeScreen appID="plus4u.parrot-v01" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen className="my-classname" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen className="test-classname" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen controlled=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen controlled=true 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen default props 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen detectHomescreen="hash" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen detectHomescreen="query" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen detectHomescreen="smart" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen detectHomescreen=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen disabled=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen disabled=false 3`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen disabled=true 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen disabled=true 3`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen displayPace=2880 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen fullTextSearchPriority=0 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen fullTextSearchPriority=0 2`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen hidden=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen hidden=false 3`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen hidden=true 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen hidden=true 3`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen id="myId" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen id="test-id" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="cs" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="de" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="en" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="en-gb" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="en-us" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="es" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="fr" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="ru" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="sk" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen language="uk" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen lifespan=30000 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen mainAttrs=undefined 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen maxDisplayCount=100 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen message="My custom mobile device messages." 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      content="My custom mobile device messages."
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen name="myName" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="bigBox" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBox"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="bigBoxCollection" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="box" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="box"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="box" 3`] = `
<Div
  className="ath-viewport"
  nestingLevel="box"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="boxCollection" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="boxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="inline" 1`] = `
<Div
  className="ath-viewport"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="inline" 3`] = `
<Div
  className="ath-viewport"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="page" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="smallBox" 1`] = `
<Div
  className="ath-viewport"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="smallBoxCollection" 1`] = `
<Div
  className="ath-viewport"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen nestingLevel="spa" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen noPrint=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen noPrint=true 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen pureRender=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen pureRender=true 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen selected=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen selected=true 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen skipFirstVisit=false 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen skipFirstVisit=true 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen startDelay=15000 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen style={"margin":8} 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;

exports[`UU5.Bricks.HomeScreen tooltip="My Tooltip" 1`] = `
<Div
  className="ath-viewport"
  nestingLevel="bigBoxCollection"
>
  <div
    className="ath-container ath-unknown ath-unknown ath-phone uu5-bricks-home-screen-hidden"
  >
    <div
      key="1"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </div>
    <P
      key="2"
    />
  </div>
</Div>
`;
